<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:text="@string/worker_title"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:fontFamily="@font/amarante"
                    android:gravity="center"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/worker_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:fontFamily="@font/amarante"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:fontFamily="@font/amarante"
                    android:gravity="center"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/worker_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:fontFamily="@font/amarante"
                    android:gravity="center"
                    android:hint="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:fontFamily="@font/amarante"
                    android:gravity="center"
                    android:text="@string/birthday"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/worker_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginTop="15sp"
                    android:fontFamily="@font/amarante"
                    android:gravity="center"
                    android:hint="@string/birthday"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/worker_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_baseline_search_24"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:text="@string/worker_specialties"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <ListView
                android:id="@+id/specialties_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:background="@android:color/holo_blue_dark" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>